# pystatreg

./: .gitignore  CHANGES.rst  README.md  changes.html  genindex.html  index.html  license.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sum_registers.html
.github/: index.html  make_switcher.py
.github/workflows/: ci.yml  code.yml  pages.yml  publish-docs.yml  sphinx-pages.yml
_modules/: index.html
_modules/pysumreg/: sum_registers.html
docs/source/: conf.py  index.rst
docs/source/_static/: switcher.json
docs/source/_static/css/: custom.css
pysumreg/: __init__.py  sum_registers.py
pysumreg/tests/: test_sum_registers.py
