[coverage:run]
concurrency=
    thread
    multiprocessing
omit =
    # omit anything under the installed packages directory
    */site-packages/*
    # omit these individual files

[flake8]
max-line-length = 115
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F401,  # imported but unused
    E402,  # module level import not at top of file (for cansas.py)
    F722,  # allow Annotated[typ, some_func("some string")]
    F811,  # support typing.overload decorator
    W503,
    W504,
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs/source,

[isort]
profile=black

[metadata]
name = pysumreg
copyright = 2014-2024, Pete R. Jemian
description = Statistics of list of (x, y) pairs from calculator-style summation registers.
description_file = README.md
description_file_content_type = text/markdown
url = https://github.com/prjemian/pysumreg
license = Creative Commons Attribution 4.0 International Public License (see LICENSE file)
license_url = "https://creativecommons.org/licenses/by/4.0/deed.en_US"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ["fitting", "linear regression", "statistics"]
author = Pete R. Jemian
author_email = prjemian@gmail.com
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 6 - Mature
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Freely Distributable
    License :: Public Domain
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development
    Topic :: Utilities

[options]
# python_requires = >=3.8
packages = find:
setup_requires =
    setuptools_scm[toml]>=6.2

# Specify any package dependencies below.  Examples shown
# None
# install_requires =
#     pip
#     setuptools-scm

[options.extras_require]
# For development tests/docs
dev =
    coveralls
    pytest
    pytest-cov
    setuptools-scm

# Specify any package data to be included in the wheel below.
[options.package_data]
# Include our documentation files: .rst
pysumreg =
    *.rst
    LICENSE.txt
